[package]
name = "solana-optimised-merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glassbench= "0.3.5"
rayon="1.8.0"
solana-merkle-tree="1.16.15"
solana-program="1.16.15"
fast-math="0.1.1"
hex = "0.4.3"
solana-sdk = "1.16.15"

[[bench]]
name = "merkle_bench"
harness = false